--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -10,7 +10,7 @@
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
     "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"tsc -p ./codegen-plugin && graphql-codegen --config codegen.yml\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "sam": "cd ../ && make watch"
   },
   "author": "",
@@ -31,11 +31,20 @@
     "object-hash": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@graphql-codegen/cli": "^2.16.4",
     "@graphql-codegen/typescript": "^2.8.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
+    "@jest/globals": "^29.4.3",
     "@types/jest": "^29.4.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.11.18"
+    "@types/node": "^18.11.18",
+    "babel-jest": "^29.4.3",
+    "dynamoose-logger": "^3.1.0",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1"
   }
 }
