--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -15,6 +15,11 @@
     "types": [
       "node",
       "mocha",
-    ]
-  }
+    ],
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "tests"
+  ]
 }
