[GraphQL] Support triggerBilling

--- a/graphql-service/Makefile
+++ b/graphql-service/Makefile
@@ -10,10 +10,5 @@ start:
 	sam local start-api --warm-containers=eager -p 4000 2>&1 -n ./devenv.json | tr "\r" "\n"
 
 watch:
-	npx nodemon \
-		-e yml,ts,graphql \
-		-i ./apollo/__generated__ \
-		-i .aws-sam \
-		--signal SIGTERM \
-		-x 'make start || exit 1'
+	npx nodemon -e yml,ts,graphql -i ./apollo/__generated__ -i .aws-sam --signal SIGTERM -x 'make start || exit 1'
 
