--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true, /* Enable experimental support for TC39 stage 2 draft decorators. */
+    "skipLibCheck": true,
     "rootDirs": [
       "./"
     ],
