--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -1,5 +1,7 @@
 # This configuration file tells GraphQL Code Generator how
 # to generate types based on our schema.
+# documents:
+#   - "./resolvers/*.ts"
 schema: "./schema/App.graphql"
 generates:
   # Specify where our generated types should live.
@@ -7,6 +9,7 @@ generates:
     plugins:
       - "typescript"
       - "typescript-resolvers"
+      - "typescript-operations"
     config:
       useIndexSignature: true
       # More on this below!
@@ -36,6 +39,3 @@ generates:
         GatewayMode: ../dynamoose/models#GatewayMode
       scalars:
         Email: string
-  # ./__generated__/dynamoose-types.ts:
-  #   plugins:
-  #     - ./codegen-plugin/codegen-plugin.js
