--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -5,22 +5,25 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "gen": "tsc -p ./codegen-plugin && graphql-codegen --config codegen.yml",
+    "gen": "graphql-codegen --config codegen.yml",
     "build": "npm run gen && tsc",
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
-    "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"tsc -p ./codegen-plugin && graphql-codegen --config codegen.yml\"",
+    "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run gen\"",
     "test": "jest",
     "sam": "cd ../ && make watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@apollo/server": "^4.3.1",
     "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-dynamodb": "^3.258.0",
+    "@aws-sdk/client-sqs": "^3.272.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
     "@types/object-hash": "^3.0.2",
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
@@ -28,13 +31,15 @@
     "dynamoose": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
-    "object-hash": "^3.0.0"
+    "object-hash": "^3.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "^2.8.7",
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
     "@jest/globals": "^29.4.3",
@@ -45,6 +50,7 @@
     "dynamoose-logger": "^3.1.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
