--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -10,7 +10,7 @@
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
     "watch": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
     "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run gen\"",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "sam": "cd ../ && make watch"
   },
   "author": "",
