[Misc] misc files

--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -7,7 +7,8 @@
     "gen": "go run github.com/Khan/genqlient",
     "build": "npm run gen && sam build",
     "start": "npm run build && sam local start-api -p 6000 --warm-containers eager --env-vars ./devenv.json",
-    "watch": "nodemon -e go,graphql,yaml -i generated__graphql.go --signal SIGINT -x 'npm run start || exit 1'"
+    "watch": "nodemon -e go,graphql,yaml -i generated__graphql.go --signal SIGINT -x 'npm run start || exit 1'",
+    "deploy": "npm run build && sam deploy"
   },
   "author": "",
   "license": "ISC"
