Add user token creation in client CLI

--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -8,9 +8,9 @@
     "gen": "graphql-codegen --config codegen.yml",
     "build": "npm run gen && tsc",
     "start": "node --experimental-specifier-resolution=node ./dist/devserver.js",
-    "watch": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
-    "watch-gen": "nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run gen\"",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "watch": "npx nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
+    "watch-gen": "npx nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run gen\"",
+    "test": "jest",
     "sam": "cd ../ && make watch"
   },
   "author": "",
@@ -24,6 +24,7 @@
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
     "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/object-hash": "^3.0.2",
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
