--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.279.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.9",
@@ -18,6 +19,7 @@
     "commander": "^10.0.0",
     "firebase": "^9.16.0",
     "firebaseui": "^6.0.2",
+    "jose": "^4.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -37,7 +39,8 @@
     "build": "PORT=8000 react-scripts build",
     "test": "PORT=8000 react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 sync build/ s3://fastchargeapi-react-dev --delete --profile fastchargeapi && echo https://d3dt8rnvve5enb.cloudfront.net/"
+    "deploy": "aws s3 sync build/ s3://fastchargeapi-react-dev --delete --profile fastchargeapi && echo https://d3dt8rnvve5enb.cloudfront.net/",
+    "fix": "eslint --fix ./"
   },
   "eslintConfig": {
     "extends": [
