[GraphQL] Update Authorizer name

--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -11,7 +11,8 @@
     "watch": "npx nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
     "watch-gen": "npx nodemon -e yml,ts,graphql -i ./__generated__ --signal SIGINT -x \"npm run gen\"",
     "test": "jest",
-    "sam": "cd ../ && make watch"
+    "sam": "cd ../ && make watch",
+    "fix": "eslint --fix ./"
   },
   "author": "",
   "license": "ISC",
@@ -24,14 +25,13 @@
     "@aws/dynamodb-data-mapper": "^0.7.3",
     "@aws/dynamodb-data-mapper-annotations": "^0.7.3",
     "@graphql-codegen/typescript-operations": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/object-hash": "^3.0.2",
     "chalk": "^5.2.0",
     "dataloader": "^2.1.0",
     "decimal.js-light": "^2.5.1",
     "dynamoose": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
+    "jsonwebtoken": "^9.0.0",
     "object-hash": "^3.0.0",
     "uuid": "^9.0.0"
   },
@@ -45,8 +45,10 @@
     "@graphql-codegen/typescript-resolvers": "^2.7.12",
     "@jest/globals": "^29.4.3",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
+    "@types/object-hash": "^3.0.2",
     "babel-jest": "^29.4.3",
     "dynamoose-logger": "^3.1.0",
     "jest": "^29.4.3",
