--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -3,19 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@aws-sdk/client-s3": "^3.279.0",
+    "@aws-sdk/client-sqs": "^3.279.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.11",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-router-hash-link": "^2.4.5",
     "commander": "^10.0.0",
     "firebase": "^9.16.0",
     "firebaseui": "^6.0.2",
@@ -28,11 +22,23 @@
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.8.1",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^5.0.1",
     "react-terminal-ui": "github:ylilarry/react-terminal-ui",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-router-hash-link": "^2.4.5",
+    "@types/uuid": "^9.0.1"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
