[GraphQL] Support dashboard APIs

--- a/graphql-service/apollo/Makefile
+++ b/graphql-service/apollo/Makefile
@@ -14,3 +14,4 @@ build-CopyDependencies:
 	cp -r ./schema "$(BUILD_DIR)/ApolloServerIAM/schema"
 	cp -r ./schema "$(BUILD_DIR)/SQSApolloServer/schema"
 
+	cp rtwrapper "$(BUILD_DIR)/ApolloServer/rtwrapper"
