[Misc] Update dependencies

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
-    "alefragnani.Bookmarks",
+    "alefragnani.bookmarks",
     "alefragnani.project-manager",
     "bungcip.better-toml",
     "dbaeumer.vscode-eslint",
@@ -9,13 +9,13 @@
     "esbenp.prettier-vscode",
     "fabiospampinato.vscode-diff",
     "geddski.macros",
-    "GitHub.codespaces",
-    "GitHub.copilot-labs",
-    "GitHub.copilot-nightly",
+    "github.codespaces",
+    "github.copilot-labs",
+    "github.copilot-nightly",
     "golang.go",
-    "GrapeCity.gc-excelviewer",
-    "GraphQL.vscode-graphql",
-    "GraphQL.vscode-graphql-syntax",
+    "grapecity.gc-excelviewer",
+    "graphql.vscode-graphql",
+    "graphql.vscode-graphql-syntax",
     "ms-python.isort",
     "ms-python.python",
     "ms-python.vscode-pylance",
@@ -30,7 +30,7 @@
     "ms-vscode.vscode-typescript-next",
     "ms-vscode.wordcount",
     "nhoizey.gremlins",
-    "PeterSchmalfeldt.explorer-exclude",
+    "peterschmalfeldt.explorer-exclude",
     "phplasma.csv-to-table",
     "redhat.vscode-yaml",
     "ryanluker.vscode-coverage-gutters",
@@ -40,12 +40,13 @@
     "techer.open-in-browser",
     "tomoki1207.pdf",
     "trond-snekvik.simple-rst",
-    "VisualStudioExptTeam.intellicode-api-usage-examples",
-    "VisualStudioExptTeam.vscodeintellicode",
+    "visualstudioexptteam.intellicode-api-usage-examples",
+    "visualstudioexptteam.vscodeintellicode",
     "vsls-contrib.gistfs",
     "waderyan.gitblame",
     "wayou.vscode-todo-highlight",
     "yzhang.markdown-all-in-one",
     "znck.grammarly",
+    "amazonwebservices.aws-toolkit-vscode"
   ]
 }
