--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -51,7 +51,9 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/uuid": "^9.0.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/typescript-operations": "^3.0.1"
   },
   "eslintConfig": {
     "extends": [
