[Gateway] Change to REQUEST type authorizer

--- a/gateway-service/template.yaml
+++ b/gateway-service/template.yaml
@@ -48,16 +48,20 @@ Resources:
         DefaultAuthorizer: FirebaseTokenAuthorizer
         Authorizers:
           FirebaseTokenAuthorizer:
+            FunctionPayloadType: REQUEST
             FunctionArn: arn:aws:lambda:us-east-1:887279901853:function:FirebaseTokenAuthorizer
-      GatewayResponses: 
-        UNAUTHORIZED: # This block allows customizing the message shown to user that are not logged in.
-          StatusCode: 401
-          ResponseTemplates:
-            "application/json": '{ "message": "Please login." }'
-        ACCESS_DENIED: # This block allows customizing the message shown to user denied.
-          StatusCode: 403
-          ResponseTemplates:
-            "application/json": '{ "message": "Authorization expired." }'
+            Identity:
+              ReauthorizeEvery: 300
+              Headers: [ "Authorization" ]
+      # GatewayResponses: 
+      #   UNAUTHORIZED: # This block allows customizing the message shown to user that are not logged in.
+      #     StatusCode: 401
+      #     ResponseTemplates:
+      #       "application/json": '{ "message": "Please login." }'
+      #   ACCESS_DENIED: # This block allows customizing the message shown to user denied.
+      #     StatusCode: 403
+      #     ResponseTemplates:
+      #       "application/json": '{ "message": "Authorization expired." }'
 
   GatewayFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
