--- a/payment-service/template.yaml
+++ b/payment-service/template.yaml
@@ -51,7 +51,11 @@ Resources:
         DefaultAuthorizer: FirebaseTokenAuthorizer
         Authorizers:
           FirebaseTokenAuthorizer:
+            FunctionPayloadType: REQUEST
             FunctionArn: arn:aws:lambda:us-east-1:887279901853:function:FirebaseTokenAuthorizer
+            Identity:
+              ReauthorizeEvery: 300
+              Headers: [ "Authorization" ]
       GatewayResponses: 
         UNAUTHORIZED: # This block allows customizing the message shown to user that are not logged in.
           StatusCode: 401
