[GraphQL] Change Endpoint rangeKey to createdAt

--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sam build",
     "start": "npm run build && sam local start-api -p 4000 --warm-containers lazy --env-vars ./devenv.json",
-    "logs": "sam logs --stack-name graphql-service --tail"
+    "logs": "sam logs --stack-name graphql-service --tail",
+    "deploy": "npm run build && sam deploy"
   },
   "author": "",
   "license": "ISC"
